--- a/css/styles.css
+++ b/css/styles.css
@@ -817,8 +817,10 @@ label {
 
 /* hypotenuse */
 .content h3 {
-  font-size: 1.25rem;
-  width: fit-content;
+  border: 2px solid red;
+  font-size: 0.85rem;
+  width: 100%;
+  max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
   font-family: 'Megrin', cursive;
