--- a/css/styles.css
+++ b/css/styles.css
@@ -817,13 +817,14 @@ label {
 
 /* hypotenuse */
 .content h3 {
-  border: 2px solid red;
-  font-size: 0.85rem;
+  /* border: 2px solid red; */
+  font-size: 1rem;
   width: 100%;
   max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
   font-family: 'Megrin', cursive;
+  letter-spacing: var(--letterSpacing);
 }
 
 @media screen and (min-width: 768px) {
